--- a/package.json
+++ b/package.json
@@ -55,8 +55,7 @@
     "macaddress": ">=0.2.9",
     "debug": ">=2.6.9",
     "lodash": ">=4.17.13",
-    "mime": ">=1.4.1"
-
+    "mime": "1.4.1"
   },
   "engines": {
     "node": ">= 4.0.0",
